<resources>
    <string name="app_name" translatable="false">Shopper</string>

    <string name="CANCEL">Cancel</string>
    <string name="CREATE">Create</string>
    <string name="UPDATE">Update</string>
    <string name="DELETE">Delete</string>
    <string name="SAVE">Save</string>
    <string name="LOAD">Load</string>
    <string name="TRANSFER">Transfer</string>
    <string name="TRANSFER_TITLE">Transfer Item(s) To:</string>

    <string name="NEW_ITEM">New Item</string>
    <string name="ITEM_QUANTITY">Quantity: 1</string>
    <string name="ITEM_NAME">Product Name</string>

    <string name="INCLUDE_CLIPBOARD">Include Clipboard</string>
    <string name="INCLUDE_ITEMS">Include %1$s Items</string>

    <string name="EDIT_LIST">Edit List Name</string>
    <string name="NEW_LIST">New List</string>
    <string name="ADD_ITEM">New Item</string>
    <string name="SORT_ITEMS">Sort</string>
    <string name="TRANSFER_ITEMS">Transfer</string>
    <string name="LIST_NAME">List Name</string>

    <string name="LIST_ADDED">List \'%1$s\' added</string>
    <string name="LIST_DELETED">List \'%1$s\' deleted</string>
    <string name="LIST_RENAMED">Renamed \'%1$s\' to \'%2$s\'</string>
    <string name="LIST_RENAME_FAILED">Failed to renamed \'%1$s\'</string>

    <string name="ITEM_TRANSFER">Transfer Item</string>
    <string name="ITEM_DELETED">Item deleted: %1$s</string>

    <string name="ITEM_ADDED">Item added: %1$s %2$s</string>
    <string name="ITEM_UPDATED">Item updated: %1$s %2$s</string>

    <string name="TRANSFER_FAIL">Nothing to transfer</string>
    <string name="ITEM_TRANSFERRED">Transferred %1$s item(s) from %2$s to %3$s</string>
    <string name="NEXT">Create Another</string>


    <string name="COPY_TO_CLIPBOARD">Copy To Clipboard</string>
    <string name="ITEMS_COPIED">Copied \'%1$s\' to clipboard</string>
    <string name="ITEMS_PASTED">Pasted \'%1$s\' from clipboard</string>

    <string name="SHAKE_FAIL">Nothing to undo.</string>
    <string name="SHAKE_UNDO">Undid deletion of \'%1$s\'.</string>

    <string name="FILE_NAME">File name</string>
    <string name="PICK_FILE">File Chooser</string>

    <string name="SAVE_DIALOG">Save to file</string>
    <string name="LOAD_DIALOG">Load from file</string>
    <string name="LOAD_CLIPBOARD">Load from clipboard</string>
    <string name="SAVE_CLIPBOARD">Copy to clipboard</string>

    <string name="SELECT_FILE">Select File</string>

    <string name="LOADED_FILE">Loaded: \'%1$s\'</string>
    <string name="ERROR_FILE">Error: \'%1$s\'</string>
    <string name="SAVED_FILE">Saved to \'%1$s\'</string>
    <string name="ITEM_UNIT">Unit: none</string>
    <string name="ITEM_CATEGORY">Category: default</string>

    <string name="SHOW_TEXT"><![CDATA[<Show Text>]]></string>
    <string name="UNIT_NONE"><![CDATA[<none>]]></string>
    <string name="CATEGORY_DEFAULT"><![CDATA[<default>]]></string>

    <string name="NULL_STR" translatable="false">null</string>
    <string name="FILE_DEFAULT_MESSAGE">Choose a file.</string>

    <string name="FILE_INVALID">Choose a file.</string>
    <string name="FILE_VALID_WRITE">Will write to: \'%1$s\'</string>
    <string name="FILE_VALID_OVERWRITE">Will OVERWRITE: \'%1$s\'</string>
    <string name="FILE_INVALID_LOAD">File \'%1$s\' does not exist!</string>
    <string name="FILE_INVALID_LOAD_DIR">Invalid file: \'%1$s\' is directory.</string>
    <string name="FILE_VALID_LOAD">Will attempt to load \'%1$s\'</string>

    <string name="UNDO_DELETE_ITEMS">Undo Item Deletion</string>
    <string name="UNDO_DELETE_SHOP">Undo List Deletion</string>
</resources>
